fix: spacing

--- a/src/containers/term-and-condition/index/term-and-confition.css
+++ b/src/containers/term-and-condition/index/term-and-confition.css
@@ -3,3 +3,7 @@
     font-weight: 700;
     display: block;
 }
+
+.term-and-conditions[data-id="gkgdnv"] .body p {
+    margin-bottom: 0;
+}
